--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Unofficial vMix API Reference</title>
     <meta charset="utf-8" />
+    <meta name="Description" content="The unofficial vMix API reference" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
