--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/vmixapi-favicon.png" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RK74VN508Z"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-RK74VN508Z');
+    </script>
 </head>
 
 <body>
@@ -44,241 +55,171 @@
                 </div>
             </div>
             <div class="d-flex flex-row" style="column-gap: 1em">
-                <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#aboutModal">About</a
-          >
-        </div>
-      </div>
-      <div class="d-flex flex-row flex-grow-1 mt-3">
-        <div
-          class="container-fluid d-none d-md-block"
-          style="width: auto; padding-left: 0"
-        >
-          <div class="accordion-flush" id="referenceList"></div>
-        </div>
-        <div class="container-fluid flex-grow-1 mb-5">
-          <label class="form-label" for="exampleDataList"
-            >Search vMix v24 API database:</label
-          >
-          <div class="input-group input-group-lg mb-5">
-            <input
-              class="form-control form-control"
-              id="apiList"
-              list="apiListOptions"
-              placeholder="Type to search..."
-              autofocus
-              style="border-width: 5px; font-weight: bold"
-            /><button
-              class="btn btn-outline-secondary"
-              id="inputClear"
-              type="button"
-            >
-              Clear
-            </button>
-          </div>
-          <datalist id="apiListOptions"></datalist>
-          <div id="apiDetails"></div>
-          <div
-            class="d-flex justify-content-center my-5"
-            id="inspiration"
-          ></div>
-        </div>
-      </div>
-      <div class="modal" id="aboutModal" tabindex="-1">
-        <div class="modal-dialog modal-lg">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">About vMixAPI.com</h5>
-              <button
-                class="btn-close"
-                type="button"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              ></button>
+                <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#aboutModal">About</a>
             </div>
-            <div class="modal-body">
-              <p>
-                vMixAPI.com is a third-party utility built by
-                <a href="https://github.com/phuvf">Nick Roberts</a>.
-                </p>
-                <p>
-                    My day job is Lead Developer for
-                    <a href="https://octocue.com">OctoCue </a>- a remote slide control tool - but I also program and operate vMix shows for corporate clients worldwide.
-                </p>
-                <p>
-                    vMixAPI.com is not made, operated or endorsed, by StudioCoast Pty Ltd. (the makers of vMix) - don't write to them if you find a mistake.
-                </p>
-                <p>
-                    All the API information is sourced from vMix's own documentation, and the original source material should be referenced if required:
-                </p>
-                <ul>
-                    <li>
-                        <a href="https://www.vmix.com/help24/index.htm?ShortcutFunctionReference.html">vMix shortcut function reference table</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="https://www.vmix.com/help24/index.htm?VBNetScripting.html"
-                    >VB.NET scripting reference</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="https://www.vmix.com/help24/index.htm?WebScripting.html"
-                    >Web scripting reference</a
-                  >
-                </li>
-                <li>
-                  <a href="https://www.vmix.com/help24/index.htm?TCPAPI.html"
-                    >TCP API reference</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="https://www.vmix.com/help24/index.htm?DeveloperAPI.html"
-                    >HTTP GET API reference</a
-                  >
-                </li>
-              </ul>
-              <p>
-                If you find this utility useful, consider buying me a coffee:
-                <script
-                  type="text/javascript"
-                  src="https://storage.ko-fi.com/cdn/widget/Widget_2.js"
-                ></script>
-                <script type="text/javascript">
-                  kofiwidget2.init(
-                    "Support Me on Ko-fi",
-                    "#29abe0",
-                    "X8X073GQ3"
-                  );
-                  kofiwidget2.draw();
-                </script>
-              </p>
-              <p>
-                Questions? Comments? Found a mistake?
-                <a href="mailto: nick@zinc.uk.com">Drop me an email</a>.
+        </div>
+        <div class="d-flex flex-row flex-grow-1 mt-3">
+            <div class="container-fluid d-none d-md-block" style="width: auto; padding-left: 0">
+                <div class="accordion-flush" id="referenceList"></div>
+            </div>
+            <div class="container-fluid flex-grow-1 mb-5">
+                <label class="form-label" for="exampleDataList">Search vMix v24 API database:</label>
+                <div class="input-group input-group-lg mb-5">
+                    <input class="form-control form-control" id="apiList" list="apiListOptions" placeholder="Type to search..." autofocus style="border-width: 5px; font-weight: bold" /><button class="btn btn-outline-secondary" id="inputClear" type="button">
+            Clear
+          </button>
+                </div>
+                <datalist id="apiListOptions"></datalist>
+                <div id="apiDetails"></div>
+                <div class="d-flex justify-content-center my-5" id="inspiration"></div>
+            </div>
+        </div>
+        <div class="modal" id="aboutModal" tabindex="-1">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">About vMixAPI.com</h5>
+                        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>
+                            vMixAPI.com is a third-party utility built by
+                            <a href="https://github.com/phuvf">Nick Roberts</a>.
+                        </p>
+                        <p>
+                            My day job is Lead Developer for
+                            <a href="https://octocue.com">OctoCue </a>- a remote slide control tool - but I also program and operate vMix shows for corporate clients worldwide.
+                        </p>
+                        <p>
+                            vMixAPI.com is not made, operated or endorsed, by StudioCoast Pty Ltd. (the makers of vMix) - don't write to them if you find a mistake.
+                        </p>
+                        <p>
+                            All the API information is sourced from vMix's own documentation, and the original source material should be referenced if required:
+                        </p>
+                        <ul>
+                            <li>
+                                <a href="https://www.vmix.com/help24/index.htm?ShortcutFunctionReference.html">vMix shortcut function
+                  reference table</a>
+                            </li>
+                            <li>
+                                <a href="https://www.vmix.com/help24/index.htm?VBNetScripting.html">VB.NET scripting reference</a>
+                            </li>
+                            <li>
+                                <a href="https://www.vmix.com/help24/index.htm?WebScripting.html">Web scripting reference</a>
+                            </li>
+                            <li>
+                                <a href="https://www.vmix.com/help24/index.htm?TCPAPI.html">TCP API reference</a>
+                            </li>
+                            <li>
+                                <a href="https://www.vmix.com/help24/index.htm?DeveloperAPI.html">HTTP GET API reference</a>
+                            </li>
+                        </ul>
+                        <p>
+                            If you find this utility useful, consider buying me a coffee:
+                            <script type="text/javascript" src="https://storage.ko-fi.com/cdn/widget/Widget_2.js"></script>
+                            <script type="text/javascript">
+                                kofiwidget2.init(
+                                    "Support Me on Ko-fi",
+                                    "#29abe0",
+                                    "X8X073GQ3"
+                                );
+                                kofiwidget2.draw();
+                            </script>
+                        </p>
+                        <p>
+                            Questions? Comments? Found a mistake?
+                            <a href="mailto: nick@zinc.uk.com">Drop me an email</a>.
                         </p>
                         <p>
                             Finally, there's no guarantee that anything on this site is relevant, correct or useful. Use at your own risk.
                         </p>
                         <p>Happy vMixing!</p>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-primary" type="button" data-bs-dismiss="modal">
-                Close
-              </button>
-            </div>
-        </div>
-    </div>
-    </div>
-    <div class="modal" id="warningModal" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title text-warning">Caution!</h5>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-primary" type="button" data-bs-dismiss="modal">
+              Close
+            </button>
+                    </div>
                 </div>
-                <div class="modal-body">
-                    <p class="lead">
-                        This is a third-party utility that describes the vMix API and shortcut functions.
-                    </p>
-                    <p>
-                        It's not the original reference source - you should refer to the
-                        <a href="https://www.vmix.com/help23/index.htm?ShortcutFunctionReference.html">vMix shortcut table on vmix.com</a
-                >
-                for this.
-              </p>
-              <p>
-                vMixAPI.com is not made, operated or endorsed by StudioCoast Pty
-                Ltd. so don't write to them if you find a mistake here.
-              </p>
             </div>
-            <div class="modal-footer">
-              <button
-                class="btn btn-primary"
-                id="dismissWarning"
-                type="button"
-                data-bs-dismiss="modal"
-              >
-                Close
-              </button>
-            </div>
-          </div>
         </div>
-      </div>
-      <div class="modal" id="editUrlModal" tabindex="-1">
-        <div class="modal-dialog modal-lg">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Edit vMix URL</h5>
-              <button
-                class="btn-close"
-                type="button"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              ></button>
-            </div>
-            <div class="modal-body">
-              <p>
-                Set the default vMix URL so the example HTTP hyperlinks work
-                with your network setup.
-              </p>
-              <p>
-                Details are stored locally on your device in a cookie and not
-                sent to our servers.
-              </p>
-              <div class="mb-3">
-                <label class="form-label" for="vMixUrl">vMix URL:</label
-                ><input
-                  class="form-control form-control-lg"
-                  id="vMixUrlInput"
-                  placeholder="http://example.com:8088"
-                  type="url"
-                  pattern="https?://.+"
-                />
-              </div>
-              <p>Common examples:</p>
-              <ul>
-                <li>
-                  http://127.0.0.1:8088 - Local machine &amp; default port
-                </li>
-                <li>http://192.168.xxx.xxx:8088 - Machine on local subnet</li>
-                <li>
-                  http://172.xxx.xxx.xxx:8088 - Machine on local subnet
-                  (alternative IP range)
-                </li>
-              </ul>
-            </div>
-            <div class="modal-footer">
-              <button
-                class="btn btn-primary"
-                id="saveVMixUrl"
-                type="button"
-                data-bs-dismiss="modal"
-              >
-                Save
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <nav class="navbar navbar-dark bg-dark">
-        <div class="container-fluid justify-content-between">
-          <p class="mb-0" style="font-size: 0.8em; color: var(--bs-light)">
-            vMix is a registered trademark of StudioCoast Pty Ltd.
-          </p>
-          <p class="mb-0" style="font-size: 0.8em; color: var(--bs-light)">
-            Supported by&nbsp;&nbsp;<a href="https://octocue.com/?ref=vmixapi"
-              ><img
-                src="img/octocue_banner_mid_light.png"
-                alt="Logo: OctoCue"
-                height="30px"
-            /></a>
-                    </p>
+        <div class="modal" id="warningModal" tabindex="-1">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title text-warning">Caution!</h5>
+                    </div>
+                    <div class="modal-body">
+                        <p class="lead">
+                            This is a third-party utility that describes the vMix API and shortcut functions.
+                        </p>
+                        <p>
+                            It's not the original reference source - you should refer to the
+                            <a href="https://www.vmix.com/help23/index.htm?ShortcutFunctionReference.html">vMix shortcut table on
+                vmix.com</a> for this.
+                        </p>
+                        <p>
+                            vMixAPI.com is not made, operated or endorsed by StudioCoast Pty Ltd. so don't write to them if you find a mistake here.
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-primary" id="dismissWarning" type="button" data-bs-dismiss="modal">
+              Close
+            </button>
+                    </div>
                 </div>
-                </nav>
             </div>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-            <script src="js/api.js"></script>
+        </div>
+        <div class="modal" id="editUrlModal" tabindex="-1">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Edit vMix URL</h5>
+                        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>
+                            Set the default vMix URL so the example HTTP hyperlinks work with your network setup.
+                        </p>
+                        <p>
+                            Details are stored locally on your device in a cookie and not sent to our servers.
+                        </p>
+                        <div class="mb-3">
+                            <label class="form-label" for="vMixUrl">vMix URL:</label><input class="form-control form-control-lg" id="vMixUrlInput" placeholder="http://example.com:8088" type="url" pattern="https?://.+" />
+                        </div>
+                        <p>Common examples:</p>
+                        <ul>
+                            <li>
+                                http://127.0.0.1:8088 - Local machine &amp; default port
+                            </li>
+                            <li>http://192.168.xxx.xxx:8088 - Machine on local subnet</li>
+                            <li>
+                                http://172.xxx.xxx.xxx:8088 - Machine on local subnet (alternative IP range)
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-primary" id="saveVMixUrl" type="button" data-bs-dismiss="modal">
+              Save
+            </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <nav class="navbar navbar-dark bg-dark">
+            <div class="container-fluid justify-content-between">
+                <p class="mb-0" style="font-size: 0.8em; color: var(--bs-light)">
+                    vMix is a registered trademark of StudioCoast Pty Ltd.
+                </p>
+                <p class="mb-0" style="font-size: 0.8em; color: var(--bs-light)">
+                    Supported by&nbsp;&nbsp;
+                    <a href="https://octocue.com/?ref=vmixapi"><img src="img/octocue_banner_mid_light.png" alt="Logo: OctoCue" height="30px" /></a>
+                </p>
+            </div>
+        </nav>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="js/api.js"></script>
 </body>
 
 </html>
