--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
                 <div class="accordion-flush" id="referenceList"></div>
             </div>
             <div class="container-fluid flex-grow-1 mb-5">
-                <label class="form-label" for="exampleDataList">Search vMix v24 API database:</label>
+                <label class="form-label" for="exampleDataList">Search vMix API database:</label>
                 <div class="input-group input-group-lg mb-5">
                     <input class="form-control form-control" id="apiList" list="apiListOptions" placeholder="Type to search..." autofocus style="border-width: 5px; font-weight: bold" /><button class="btn btn-outline-secondary" id="inputClear" type="button">
             Clear
