--- a/public/index.html
+++ b/public/index.html
@@ -98,20 +98,29 @@
                         </p>
                         <ul>
                             <li>
-                                <a href="https://www.vmix.com/help24/index.htm?ShortcutFunctionReference.html">vMix shortcut function
-                  reference table</a>
+                                vMix shortcut function reference table
+                                <a href="https://www.vmix.com/help24/index.htm?ShortcutFunctionReference.html">v24</a>
+                                <a href="https://www.vmix.com/help25/index.htm?ShortcutFunctionReference.html">v25</a>
                             </li>
                             <li>
-                                <a href="https://www.vmix.com/help24/index.htm?VBNetScripting.html">VB.NET scripting reference</a>
+                                VB.NET scripting reference
+                                <a href="https://www.vmix.com/help24/index.htm?VBNetScripting.html">v24</a>
+                                <a href="https://www.vmix.com/help25/index.htm?VBNetScripting.html">v25</a>
                             </li>
                             <li>
-                                <a href="https://www.vmix.com/help24/index.htm?WebScripting.html">Web scripting reference</a>
+                                Web scripting reference
+                                <a href="https://www.vmix.com/help24/index.htm?WebScripting.html">v24</a>
+                                <a href="https://www.vmix.com/help25/index.htm?WebScripting.html">v25</a>
                             </li>
                             <li>
-                                <a href="https://www.vmix.com/help24/index.htm?TCPAPI.html">TCP API reference</a>
+                                TCP API reference
+                                <a href="https://www.vmix.com/help24/index.htm?TCPAPI.html">v24</a>
+                                <a href="https://www.vmix.com/help25/index.htm?TCPAPI.html">v25</a>
                             </li>
                             <li>
-                                <a href="https://www.vmix.com/help24/index.htm?DeveloperAPI.html">HTTP GET API reference</a>
+                                HTTP GET API reference
+                                <a href="https://www.vmix.com/help24/index.htm?DeveloperAPI.html">v24</a>
+                                <a href="https://www.vmix.com/help25/index.htm?DeveloperAPI.html">v25</a>
                             </li>
                         </ul>
                         <p>
