--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/vmixapi-favicon.png" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RK74VN508Z"></script>
+    <meta property="og:image" content="/img/vmixapi-favicon.png" />
     <script>
         window.dataLayer = window.dataLayer || [];
 
