--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RK74VN508Z"></script>
     <meta property="og:image" content="https://vmixapi.com/img/vmixapi-favicon.png" />
     <meta property="og:title" content="Unofficial vMix API reference" />
+    <meta property="og:description" content="The unofficial vMix API reference" />
     <script>
         window.dataLayer = window.dataLayer || [];
 
