--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,7 @@
                         </p>
                         <p>
                             It's not the original reference source - you should refer to the
-                            <a href="https://www.vmix.com/help23/index.htm?ShortcutFunctionReference.html">vMix shortcut
+                            <a href="https://www.vmix.com/help27/ShortcutFunctionReference.html">vMix shortcut
                                 table on
                                 vmix.com</a> for this.
                         </p>
