--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/vmixapi-favicon.png" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RK74VN508Z"></script>
-    <meta property="og:image" content="https://vmixapi.com/img/vmixapi-favicon.png" />
+    <meta property="og:image" content="https://vmixapi.com/img/vmixapi-icon.png" />
     <meta property="og:title" content="Unofficial vMix API reference" />
-    <meta property="og:description" content="The unofficial vMix API reference" />
+    <meta property="og:description" content="A reference for the vMix API, including samples for Companion, VB.NET, TCP and HTTP." />
     <script>
         window.dataLayer = window.dataLayer || [];
 
