--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
     <meta property="og:image" content="https://vmixapi.com/img/vmixapi-icon.png" />
     <meta property="og:title" content="Unofficial vMix API reference" />
     <meta property="og:description" content="A reference for the vMix API, including samples for Companion, VB.NET, TCP and HTTP." />
+    <meta property="og:url" content="https://vmixapi.com/" />
+    <meta property="og:type" content="website" />
     <script>
         window.dataLayer = window.dataLayer || [];
 
