--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" type="image/png" href="img/vmixapi-favicon.png" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RK74VN508Z"></script>
     <meta property="og:image" content="https://vmixapi.com/img/vmixapi-icon.png" />
-    <meta property="og:title" content="Unofficial vMix API reference" />
+    <meta property="og:title" content="The unofficial vMix API reference" />
     <meta property="og:description" content="A reference for the vMix API, including samples for Companion, VB.NET, TCP and HTTP." />
     <meta property="og:url" content="https://vmixapi.com/" />
     <meta property="og:type" content="website" />
