--- a/public/index.html
+++ b/public/index.html
@@ -107,30 +107,35 @@
                                 <a href="https://www.vmix.com/help24/index.htm?ShortcutFunctionReference.html">v24</a>
                                 <a href="https://www.vmix.com/help25/index.htm?ShortcutFunctionReference.html">v25</a>
                                 <a href="https://www.vmix.com/help26/ShortcutFunctionReference.html">v26</a>
+                                <a href="https://www.vmix.com/help27/ShortcutFunctionReference.html">v27</a>
                             </li>
                             <li>
                                 VB.NET scripting reference
                                 <a href="https://www.vmix.com/help24/index.htm?VBNetScripting.html">v24</a>
                                 <a href="https://www.vmix.com/help25/index.htm?VBNetScripting.html">v25</a>
                                 <a href="https://www.vmix.com/help26/VBNetScripting.html">v26</a>
+                                <a href="https://www.vmix.com/help27/VBNetScripting.html">v27</a>
                             </li>
                             <li>
                                 Web scripting reference
                                 <a href="https://www.vmix.com/help24/index.htm?WebScripting.html">v24</a>
                                 <a href="https://www.vmix.com/help25/index.htm?WebScripting.html">v25</a>
                                 <a href="https://www.vmix.com/help26/WebScripting.html">v26</a>
+                                <a href="https://www.vmix.com/help27/WebScripting.html">v27</a>
                             </li>
                             <li>
                                 TCP API reference
                                 <a href="https://www.vmix.com/help24/index.htm?TCPAPI.html">v24</a>
                                 <a href="https://www.vmix.com/help25/index.htm?TCPAPI.html">v25</a>
                                 <a href="https://www.vmix.com/help26/TCPAPI.html">v26</a>
+                                <a href="https://www.vmix.com/help27/TCPAPI.html">v27</a>
                             </li>
                             <li>
                                 HTTP GET API reference
                                 <a href="https://www.vmix.com/help24/index.htm?DeveloperAPI.html">v24</a>
                                 <a href="https://www.vmix.com/help25/index.htm?DeveloperAPI.html">v25</a>
                                 <a href="https://www.vmix.com/help26/DeveloperAPI.html">v26</a>
+                                <a href="https://www.vmix.com/help27/DeveloperAPI.html">v27</a>
                             </li>
                         </ul>
                         <p>
