--- a/public/index.html
+++ b/public/index.html
@@ -249,7 +249,7 @@
                         </ul>
                         <p><small>* Generally, using input numbers is not recommended, as these will break if inputs are re-ordered.</small></p>
                         <p>
-                            There are also some special references - but these will not work with all API functions - so YMMV:
+                            There are also some special references - but these will not work with all API functions, so YMMV:
                         </p>
 
                         <ul>
