Add contribution guidelines to the index.html

--- a/public/index.html
+++ b/public/index.html
@@ -160,6 +160,11 @@
                             <a href="mailto: nick@zinc.uk.com">Drop me an email</a>.
                         </p>
                         <p>
+                            Want to contribute to the project? You can do so on 
+                            <a href="https://github.com/phuvf/vmixapi">GitHub</a>! 
+                            Feel free to fork the repository, make improvements, and submit a pull request.
+                        </p>
+                        <p>
                             Finally, there's no guarantee that anything on this site is relevant, correct or useful. Use at your own risk.
                         </p>
                         <p>Happy vMixing!</p>
