Add v29 references to vMix API documentation links

--- a/public/index.html
+++ b/public/index.html
@@ -109,6 +109,7 @@
                                 <a href="https://www.vmix.com/help26/ShortcutFunctionReference.html">v26</a>
                                 <a href="https://www.vmix.com/help27/ShortcutFunctionReference.html">v27</a>
                                 <a href="https://www.vmix.com/help28/ShortcutFunctionReference.html">v28</a>
+                                <a href="https://www.vmix.com/help29/ShortcutFunctionReference.html">v29</a>
                             </li>
                             <li>
                                 VB.NET scripting reference
@@ -117,6 +118,7 @@
                                 <a href="https://www.vmix.com/help26/VBNetScripting.html">v26</a>
                                 <a href="https://www.vmix.com/help27/VBNetScripting.html">v27</a>
                                 <a href="https://www.vmix.com/help28/VBNetScripting.html">v28</a>
+                                <a href="https://www.vmix.com/help29/VBNetScripting.html">v29</a>
                             </li>
                             <li>
                                 Web scripting reference
@@ -125,6 +127,7 @@
                                 <a href="https://www.vmix.com/help26/WebScripting.html">v26</a>
                                 <a href="https://www.vmix.com/help27/WebScripting.html">v27</a>
                                 <a href="https://www.vmix.com/help28/WebScripting.html">v28</a>
+                                <a href="https://www.vmix.com/help29/WebScripting.html">v29</a>
                             </li>
                             <li>
                                 TCP API reference
@@ -133,6 +136,7 @@
                                 <a href="https://www.vmix.com/help26/TCPAPI.html">v26</a>
                                 <a href="https://www.vmix.com/help27/TCPAPI.html">v27</a>
                                 <a href="https://www.vmix.com/help28/TCPAPI.html">v28</a>
+                                <a href="https://www.vmix.com/help29/TCPAPI.html">v29</a>
                             </li>
                             <li>
                                 HTTP GET API reference
@@ -141,6 +145,7 @@
                                 <a href="https://www.vmix.com/help26/DeveloperAPI.html">v26</a>
                                 <a href="https://www.vmix.com/help27/DeveloperAPI.html">v27</a>
                                 <a href="https://www.vmix.com/help28/DeveloperAPI.html">v28</a>
+                                <a href="https://www.vmix.com/help29/DeveloperAPI.html">v29</a>
                             </li>
                         </ul>
                         <p>
